# AMA-Model

./: .env  CMakeLists.txt  README.md  compile.sh  main.cpp
config/: Constants.h  SystemConfig.cpp  SystemConfig.h  header.h
memory/: LocalMemory.cpp  LocalMemory.h  Memory.h  RemoteMemory.cpp  RemoteMemory.h  header.h
prefetcher/: AccuracyPrefetcher.cpp  AccuracyPrefetcher.h  Prefetcher.h  header.h
system/: System.cpp  System.h
